initial support for ExtentReports v5