@@ -20,8 +20,7 @@ import com.aventstack.extentreports.MediaEntityBuilder;
 import com.aventstack.extentreports.Status;
 import com.aventstack.extentreports.gherkin.model.Asterisk;
 import com.aventstack.extentreports.markuputils.MarkupHelper;
-import com.aventstack.extentreports.model.service.LogService;
-import com.aventstack.extentreports.model.service.TestService;
+import com.aventstack.extentreports.model.Test;
 import com.aventstack.extentreports.service.ExtentService;
 
 import cucumber.api.HookTestStep;
@@ -59,15 +58,16 @@ import gherkin.pickles.PickleTable;
 import gherkin.pickles.PickleTag;
 
 /**
- * A port of Cucumber-JVM (MIT licensed) HtmlFormatter for Extent Framework 
- * Original source: https://github.com/cucumber/cucumber-jvm/blob/master/core/src/main/java/cucumber/runtime/formatter/HTMLFormatter.java
+ * A port of Cucumber-JVM (MIT licensed) HtmlFormatter for Extent Framework
+ * Original source:
+ * https://github.com/cucumber/cucumber-jvm/blob/master/core/src/main/java/cucumber/runtime/formatter/HTMLFormatter.java
  *
  */
 public class ExtentCucumberAdapter implements ConcurrentEventListener, StrictAware {
 
     private static final String SCREENSHOT_DIR_PROPERTY = "screenshot.dir";
     private static final String SCREENSHOT_REL_PATH_PROPERTY = "screenshot.rel.path";
-    
+
     private static Map<String, ExtentTest> featureMap = new ConcurrentHashMap<>();
     private static ThreadLocal<ExtentTest> featureTestThreadLocal = new InheritableThreadLocal<>();
     private static Map<String, ExtentTest> scenarioOutlineMap = new ConcurrentHashMap<>();
@@ -75,11 +75,11 @@ public class ExtentCucumberAdapter implements ConcurrentEventListener, StrictAwa
     private static ThreadLocal<ExtentTest> scenarioThreadLocal = new InheritableThreadLocal<>();
     private static ThreadLocal<Boolean> isHookThreadLocal = new InheritableThreadLocal<>();
     private static ThreadLocal<ExtentTest> stepTestThreadLocal = new InheritableThreadLocal<>();
-    
+
     private String screenshotDir;
     private String screenshotRelPath;
     private boolean strict = false;
-    
+
     @SuppressWarnings("serial")
     private static final Map<String, String> MIME_TYPES_EXTENSIONS = new HashMap<String, String>() {
         {
@@ -91,22 +91,22 @@ public class ExtentCucumberAdapter implements ConcurrentEventListener, StrictAwa
             put("video/ogg", "ogg");
         }
     };
-    
+
     private static final AtomicInteger EMBEDDED_INT = new AtomicInteger(0);
-    
+
     private final TestSourcesModel testSources = new TestSourcesModel();
 
     private ThreadLocal<String> currentFeatureFile = new ThreadLocal<>();
     private ThreadLocal<ScenarioOutline> currentScenarioOutline = new InheritableThreadLocal<>();
     private ThreadLocal<Examples> currentExamples = new InheritableThreadLocal<>();
-    
+
     private EventHandler<TestSourceRead> testSourceReadHandler = new EventHandler<TestSourceRead>() {
         @Override
         public void receive(TestSourceRead event) {
             handleTestSourceRead(event);
         }
     };
-    private EventHandler<TestCaseStarted> caseStartedHandler= new EventHandler<TestCaseStarted>() {
+    private EventHandler<TestCaseStarted> caseStartedHandler = new EventHandler<TestCaseStarted>() {
         @Override
         public void receive(TestCaseStarted event) {
             handleTestCaseStarted(event);
@@ -144,8 +144,8 @@ public class ExtentCucumberAdapter implements ConcurrentEventListener, StrictAwa
     };
 
     public ExtentCucumberAdapter(String arg) {
-    	ExtentService.getInstance();
-    	Object prop = ExtentService.getProperty(SCREENSHOT_DIR_PROPERTY);
+        ExtentService.getInstance();
+        Object prop = ExtentService.getProperty(SCREENSHOT_DIR_PROPERTY);
         screenshotDir = prop == null ? "test-output/" : String.valueOf(prop);
         prop = ExtentService.getProperty(SCREENSHOT_REL_PATH_PROPERTY);
         screenshotRelPath = prop == null || String.valueOf(prop).isEmpty() ? screenshotDir : String.valueOf(prop);
@@ -162,7 +162,7 @@ public class ExtentCucumberAdapter implements ConcurrentEventListener, StrictAwa
         publisher.registerHandlerFor(WriteEvent.class, writeEventhandler);
         publisher.registerHandlerFor(TestRunFinished.class, runFinishedHandler);
     }
-    
+
     @Override
     public void setStrict(boolean strict) {
         this.strict = strict;
@@ -176,21 +176,21 @@ public class ExtentCucumberAdapter implements ConcurrentEventListener, StrictAwa
         handleStartOfFeature(event.testCase);
         handleScenarioOutline(event.testCase);
         createTestCase(event.testCase);
-        if (testSources.hasBackground(currentFeatureFile.get(), event.testCase.getLine())) { 
+        if (testSources.hasBackground(currentFeatureFile.get(), event.testCase.getLine())) {
             // background
         }
     }
 
     private synchronized void handleTestStepStarted(TestStepStarted event) {
         isHookThreadLocal.set(false);
-        
+
         if (event.testStep instanceof HookTestStep) {
-        	ExtentTest t = scenarioThreadLocal.get()	
-                    .createNode(Asterisk.class, event.testStep.getCodeLocation());	
+            ExtentTest t = scenarioThreadLocal.get()
+                    .createNode(Asterisk.class, event.testStep.getCodeLocation());
             stepTestThreadLocal.set(t);
             isHookThreadLocal.set(true);
         }
-        
+
         if (event.testStep instanceof PickleStepTestStep) {
             PickleStepTestStep testStep = (PickleStepTestStep) event.testStep;
             createTestStep(testStep);
@@ -200,28 +200,28 @@ public class ExtentCucumberAdapter implements ConcurrentEventListener, StrictAwa
     private synchronized void handleTestStepFinished(TestStepFinished event) {
         updateResult(event.result);
     }
-    
+
     private synchronized void updateResult(Result result) {
+        Test test = stepTestThreadLocal.get().getModel();
         switch (result.getStatus().lowerCaseName()) {
-            case "failed":
+            case "failed" :
                 stepTestThreadLocal.get().fail(result.getError());
                 break;
-            case "undefined":
-            	if (strict) {
-            		stepTestThreadLocal.get().fail("Step undefined");
-            		break;
-            	}
-            	stepTestThreadLocal.get().skip("Step undefined");
-            	break;
-            case "pending":
-            case "skipped":
-            	if (isHookThreadLocal.get()) {
-            		ExtentService.getInstance().removeTest(stepTestThreadLocal.get());
-            		break;
-            	}
-                Boolean currentEndingEventSkipped = stepTestThreadLocal.get().getModel().getLogContext() != null 
-                    && !stepTestThreadLocal.get().getModel().getLogContext().isEmpty()
-                        ? stepTestThreadLocal.get().getModel().getLogContext().getLast().getStatus() == Status.SKIP
+            case "undefined" :
+                if (strict) {
+                    stepTestThreadLocal.get().fail("Step undefined");
+                    break;
+                }
+                stepTestThreadLocal.get().skip("Step undefined");
+                break;
+            case "pending" :
+            case "skipped" :
+                if (isHookThreadLocal.get()) {
+                    ExtentService.getInstance().removeTest(stepTestThreadLocal.get());
+                    break;
+                }
+                boolean currentEndingEventSkipped = test.hasLog()
+                        ? test.getLogs().get(test.getLogs().size() - 1).getStatus() == Status.SKIP
                         : false;
                 if (result.getError() != null) {
                     stepTestThreadLocal.get().skip(result.getError());
@@ -230,19 +230,16 @@ public class ExtentCucumberAdapter implements ConcurrentEventListener, StrictAwa
                     stepTestThreadLocal.get().skip(details);
                 }
                 break;
-            case "passed":
-                if (stepTestThreadLocal.get()!= null && stepTestThreadLocal.get().getModel().getLogContext().isEmpty() && !isHookThreadLocal.get()) {
-            		stepTestThreadLocal.get().pass("");
-                }
+            case "passed" :
+                if (stepTestThreadLocal.get() != null && !test.hasLog() && !isHookThreadLocal.get())
+                    stepTestThreadLocal.get().pass("");
                 if (stepTestThreadLocal.get() != null) {
-	                Boolean hasLog = TestService.testHasLog(stepTestThreadLocal.get().getModel());
-	                Boolean hasScreenCapture = hasLog && LogService.logHasScreenCapture(stepTestThreadLocal.get().getModel().getLogContext().getFirst());
-	                if (isHookThreadLocal.get() && !hasLog && !hasScreenCapture) {
-	                    ExtentService.getInstance().removeTest(stepTestThreadLocal.get());
-	                }
+                    Boolean hasScreenCapture = test.hasLog() && test.getLogs().get(0).hasMedia();
+                    if (isHookThreadLocal.get() && !test.hasLog() && !hasScreenCapture)
+                        ExtentService.getInstance().removeTest(stepTestThreadLocal.get());
                 }
                 break;
-            default:
+            default :
                 break;
         }
     }
@@ -251,18 +248,20 @@ public class ExtentCucumberAdapter implements ConcurrentEventListener, StrictAwa
         String mimeType = event.mimeType;
         String extension = MIME_TYPES_EXTENSIONS.get(mimeType);
         if (extension != null) {
-            StringBuilder fileName = new StringBuilder("embedded").append(EMBEDDED_INT.incrementAndGet()).append(".").append(extension);
+            StringBuilder fileName = new StringBuilder("embedded").append(EMBEDDED_INT.incrementAndGet()).append(".")
+                    .append(extension);
             try {
                 URL url = toUrl(fileName.toString());
                 writeBytesToURL(event.data, url);
                 try {
                     File f = new File(url.toURI());
                     if (stepTestThreadLocal.get() == null) {
-                    	ExtentTest t = scenarioThreadLocal.get()
+                        ExtentTest t = scenarioThreadLocal.get()
                                 .createNode(Asterisk.class, "Embed");
                         stepTestThreadLocal.set(t);
                     }
-                    stepTestThreadLocal.get().info("", MediaEntityBuilder.createScreenCaptureFromPath(screenshotRelPath + f.getName()).build());
+                    stepTestThreadLocal.get().info("",
+                            MediaEntityBuilder.createScreenCaptureFromPath(screenshotRelPath + f.getName()).build());
                 } catch (URISyntaxException e) {
                     e.printStackTrace();
                 }
@@ -271,7 +270,7 @@ public class ExtentCucumberAdapter implements ConcurrentEventListener, StrictAwa
             }
         }
     }
-    
+
     private static void writeBytesToURL(byte[] buf, URL url) throws IOException {
         OutputStream out = createReportFileOutputStream(url);
         try {
@@ -280,7 +279,7 @@ public class ExtentCucumberAdapter implements ConcurrentEventListener, StrictAwa
             throw new IOException("Unable to write to report file item: ", e);
         }
     }
-    
+
     private static OutputStream createReportFileOutputStream(URL url) {
         try {
             return new URLOutputStream(url);
@@ -288,17 +287,17 @@ public class ExtentCucumberAdapter implements ConcurrentEventListener, StrictAwa
             throw new CucumberException(e);
         }
     }
-    
+
     private URL toUrl(String fileName) {
         try {
             URL url = Paths.get(screenshotDir, fileName).toUri().toURL();
             return url;
         } catch (IOException e) {
-           throw new CucumberException(e);
+            throw new CucumberException(e);
         }
     }
 
-    private void handleWrite(WriteEvent event) { 
+    private void handleWrite(WriteEvent event) {
         String text = event.text;
         if (text != null && !text.isEmpty()) {
             stepTestThreadLocal.get().info(text);
@@ -309,6 +308,7 @@ public class ExtentCucumberAdapter implements ConcurrentEventListener, StrictAwa
         ExtentService.getInstance().flush();
     }
 
+    @SuppressWarnings("unlikely-arg-type")
     private synchronized void handleStartOfFeature(TestCase testCase) {
         if (currentFeatureFile == null || !currentFeatureFile.equals(testCase.getUri())) {
             currentFeatureFile.set(testCase.getUri());
@@ -322,12 +322,14 @@ public class ExtentCucumberAdapter implements ConcurrentEventListener, StrictAwa
             if (featureMap.containsKey(feature.getName())) {
                 featureTestThreadLocal.set(featureMap.get(feature.getName()));
                 return;
-            }            
-            if (featureTestThreadLocal.get() != null && featureTestThreadLocal.get().getModel().getName().equals(feature.getName())) {
+            }
+            if (featureTestThreadLocal.get() != null
+                    && featureTestThreadLocal.get().getModel().getName().equals(feature.getName())) {
                 return;
             }
             ExtentTest t = ExtentService.getInstance()
-                    .createTest(com.aventstack.extentreports.gherkin.model.Feature.class, feature.getName(), feature.getDescription());
+                    .createTest(com.aventstack.extentreports.gherkin.model.Feature.class, feature.getName(),
+                            feature.getDescription());
             featureTestThreadLocal.set(t);
             featureMap.put(feature.getName(), t);
             List<String> tagList = createTagsList(feature.getTags());
@@ -346,14 +348,15 @@ public class ExtentCucumberAdapter implements ConcurrentEventListener, StrictAwa
     private synchronized void handleScenarioOutline(TestCase testCase) {
         TestSourcesModel.AstNode astNode = testSources.getAstNode(currentFeatureFile.get(), testCase.getLine());
         if (TestSourcesModel.isScenarioOutlineScenario(astNode)) {
-            ScenarioOutline scenarioOutline = (ScenarioOutline)TestSourcesModel.getScenarioDefinition(astNode);
-            if (currentScenarioOutline.get() == null || !currentScenarioOutline.get().getName().equals(scenarioOutline.getName())) {
+            ScenarioOutline scenarioOutline = (ScenarioOutline) TestSourcesModel.getScenarioDefinition(astNode);
+            if (currentScenarioOutline.get() == null
+                    || !currentScenarioOutline.get().getName().equals(scenarioOutline.getName())) {
                 scenarioOutlineThreadLocal.set(null);
                 createScenarioOutline(scenarioOutline);
                 currentScenarioOutline.set(scenarioOutline);
                 addOutlineStepsToReport(scenarioOutline);
             }
-            Examples examples = (Examples)astNode.parent.node;
+            Examples examples = (Examples) astNode.parent.node;
             if (currentExamples.get() == null || !currentExamples.get().equals(examples)) {
                 currentExamples.set(examples);
                 createExamples(examples);
@@ -372,19 +375,20 @@ public class ExtentCucumberAdapter implements ConcurrentEventListener, StrictAwa
         }
         if (scenarioOutlineThreadLocal.get() == null) {
             ExtentTest t = featureTestThreadLocal.get()
-                    .createNode(com.aventstack.extentreports.gherkin.model.ScenarioOutline.class, scenarioOutline.getName(), scenarioOutline.getDescription());
+                    .createNode(com.aventstack.extentreports.gherkin.model.ScenarioOutline.class,
+                            scenarioOutline.getName(), scenarioOutline.getDescription());
             scenarioOutlineThreadLocal.set(t);
             scenarioOutlineMap.put(scenarioOutline.getName(), t);
             List<String> featureTags = scenarioOutlineThreadLocal.get().getModel()
-            		.getParent().getCategoryContext().getAll()
-            		.stream()
-            		.map(x -> x.getName())
-            		.collect(Collectors.toList());
+                    .getParent().getCategorySet()
+                    .stream()
+                    .map(x -> x.getName())
+                    .collect(Collectors.toList());
             scenarioOutline.getTags()
-            	.stream()
-            	.map(x -> x.getName())
-            	.filter(x -> !featureTags.contains(x))
-            	.forEach(scenarioOutlineThreadLocal.get()::assignCategory);
+                    .stream()
+                    .map(x -> x.getName())
+                    .filter(x -> !featureTags.contains(x))
+                    .forEach(scenarioOutlineThreadLocal.get()::assignCategory);
         }
     }
 
@@ -393,9 +397,9 @@ public class ExtentCucumberAdapter implements ConcurrentEventListener, StrictAwa
             if (step.getArgument() != null) {
                 Node argument = step.getArgument();
                 if (argument instanceof DocString) {
-                    createDocStringMap((DocString)argument);
+                    createDocStringMap((DocString) argument);
                 } else if (argument instanceof DataTable) {
-                    
+
                 }
             }
         }
@@ -419,7 +423,7 @@ public class ExtentCucumberAdapter implements ConcurrentEventListener, StrictAwa
         markup = scenarioOutlineThreadLocal.get().getModel().getDescription() + markup;
         scenarioOutlineThreadLocal.get().getModel().setDescription(markup);
     }
-    
+
     private String[][] getTable(List<TableRow> rows) {
         String data[][] = null;
         int rowSize = rows.size();
@@ -441,15 +445,18 @@ public class ExtentCucumberAdapter implements ConcurrentEventListener, StrictAwa
         TestSourcesModel.AstNode astNode = testSources.getAstNode(currentFeatureFile.get(), testCase.getLine());
         if (astNode != null) {
             ScenarioDefinition scenarioDefinition = TestSourcesModel.getScenarioDefinition(astNode);
-            ExtentTest parent = scenarioOutlineThreadLocal.get() != null ? scenarioOutlineThreadLocal.get() : featureTestThreadLocal.get();
-            ExtentTest t = parent.createNode(com.aventstack.extentreports.gherkin.model.Scenario.class, scenarioDefinition.getName(), scenarioDefinition.getDescription());
+            ExtentTest parent = scenarioOutlineThreadLocal.get() != null
+                    ? scenarioOutlineThreadLocal.get()
+                    : featureTestThreadLocal.get();
+            ExtentTest t = parent.createNode(com.aventstack.extentreports.gherkin.model.Scenario.class,
+                    scenarioDefinition.getName(), scenarioDefinition.getDescription());
             scenarioThreadLocal.set(t);
         }
         if (!testCase.getTags().isEmpty()) {
             testCase.getTags()
-	    		.stream()
-	    		.map(PickleTag::getName)
-	    		.forEach(scenarioThreadLocal.get()::assignCategory);
+                    .stream()
+                    .map(PickleTag::getName)
+                    .forEach(scenarioThreadLocal.get()::assignCategory);
         }
     }
 
@@ -459,11 +466,12 @@ public class ExtentCucumberAdapter implements ConcurrentEventListener, StrictAwa
         if (astNode != null) {
             Step step = (Step) astNode.node;
             try {
-                String name = stepName == null || stepName.isEmpty() 
+                String name = stepName == null || stepName.isEmpty()
                         ? step.getText().replace("<", "&lt;").replace(">", "&gt;")
                         : stepName;
                 ExtentTest t = scenarioThreadLocal.get()
-                        .createNode(new GherkinKeyword(step.getKeyword().trim()), step.getKeyword() + name, testStep.getCodeLocation());
+                        .createNode(new GherkinKeyword(step.getKeyword().trim()), step.getKeyword() + name,
+                                testStep.getCodeLocation());
                 stepTestThreadLocal.set(t);
             } catch (ClassNotFoundException e) {
                 e.printStackTrace();
@@ -472,14 +480,14 @@ public class ExtentCucumberAdapter implements ConcurrentEventListener, StrictAwa
         if (!testStep.getStepArgument().isEmpty()) {
             Argument argument = testStep.getStepArgument().get(0);
             if (argument instanceof PickleString) {
-                createDocStringMap((PickleString)argument);
+                createDocStringMap((PickleString) argument);
             } else if (argument instanceof PickleTable) {
                 List<PickleRow> rows = ((PickleTable) argument).getRows();
                 stepTestThreadLocal.get().pass(MarkupHelper.createTable(getPickleTable(rows)).getMarkup());
             }
         }
     }
-    
+
     private String[][] getPickleTable(List<PickleRow> rows) {
         String data[][] = null;
         int rowSize = rows.size();
@@ -508,16 +516,17 @@ public class ExtentCucumberAdapter implements ConcurrentEventListener, StrictAwa
     public static synchronized void addTestStepLog(String message) {
         stepTestThreadLocal.get().info(message);
     }
-	
+
     public static synchronized void addTestStepScreenCaptureFromPath(String imagePath) throws IOException {
-	    stepTestThreadLocal.get().addScreenCaptureFromPath(imagePath);
+        stepTestThreadLocal.get().addScreenCaptureFromPath(imagePath);
     }
-	
-    public static synchronized void addTestStepScreenCaptureFromPath(String imagePath, String title) throws IOException {
-	    stepTestThreadLocal.get().addScreenCaptureFromPath(imagePath, title);
+
+    public static synchronized void addTestStepScreenCaptureFromPath(String imagePath, String title)
+            throws IOException {
+        stepTestThreadLocal.get().addScreenCaptureFromPath(imagePath, title);
     }
-    
+
     public static ExtentTest getCurrentStep() {
-    	return stepTestThreadLocal.get();
+        return stepTestThreadLocal.get();
     }
 }
